# RAG

./: .env.example  .gitignore  LICENSE  RAGAS_QUICK_START.md  README.md  deployment.yaml  pyproject.toml  requirements.txt  run_benchmark.py  run_single_query.py  start_ollama.sh  test_parser_fixes.py  test_ragas_local.py
neo4j/: docker-compose.yml
notebooks/: GraphRAG.ipynb  VOO_485BPOS_snippet.txt  edgar.ipynb  llamaparse_parsing_pipeline.ipynb  neo4j.ipynb  open_source_parsers.ipynb  rag.ipynb  rag_evaluation.ipynb  test_benchmark_fix.py  unstructured_parsing_pipeline.ipynb  vanguard.ipynb  yahoo.ipynb
notebooks/edgar_output/: 0001104659-25-020270.txt  0001104659-25-020311.txt
notebooks/etf_factSheets_processed/: Consumer_Discretionary_ETF_factSheet.md  Consumer_Staples_ETF_factSheet.md  ESG_U.S._Corporate_Bond_ETF_factSheet.md  Emerging_Markets_Government_Bond_ETF_factSheet.md  FTSE_Developed_Markets_ETF_factSheet.md  FTSE_Europe_ETF_factSheet.md  FTSE_Pacific_ETF_factSheet.md  Financials_ETF_factSheet.md  Growth_ETF_factSheet.md  Intermediate-Term_Bond_ETF_factSheet.md  International_Dividend_Appreciation_ETF_factSheet.md  International_High_Dividend_Yield_ETF_factSheet.md  Mega_Cap_ETF_factSheet.md  Russell_1000_Growth_ETF_factSheet.md  Russell_3000_ETF_factSheet.md  S&P_Mid-Cap_400_ETF_factSheet.md  S&P_Mid-Cap_400_Value_ETF_factSheet.md  Total_World_Bond_ETF_factSheet.md  Total_World_Stock_ETF_factSheet.md  U.S._Minimum_Volatility_ETF_factSheet.md
notebooks/extracted_content/: 0-3_Month_Treasury_Bill_ETF_factSheet.md  500_Index_Fund_Admiral__factSheet.md  500_Index_Fund_Institutional_Select__factSheet.md  500_Index_Fund_Investor__factSheet.md  Baillie_Gifford_Global_Positive_Impact_Stock_Fund_Investor__factSheet.md  Balanced_Index_Fund_Admiral__factSheet.md  Balanced_Index_Fund_Institutional__factSheet.md  Balanced_Index_Fund_Investor__factSheet.md  California_Intermediate-Term_Tax-Exempt_Fund_Admiral__factSheet.md  California_Intermediate-Term_Tax-Exempt_Fund_Investor__factSheet.md  California_Long-Term_Tax-Exempt_Fund_Admiral__factSheet.md  California_Long-Term_Tax-Exempt_Fund_Investor__factSheet.md  California_Municipal_Money_Market_Fund_factSheet.md  California_Tax-Exempt_Bond_ETF_factSheet.md  Capital_Opportunity_Fund_Admiral__factSheet.md  Capital_Opportunity_Fund_Investor__factSheet.md  Cash_Reserves_Federal_Money_Market_Fund_Admiral__factSheet.md  Commodity_Strategy_Fund_Admiral__factSheet.md  Communication_Services_ETF_factSheet.md  Communication_Services_Index_Fund_Admiral__factSheet.md  Consumer_Discretionary_ETF_factSheet.md  Consumer_Discretionary_Index_Fund_Admiral__factSheet.md  Consumer_Staples_ETF_factSheet.md  Consumer_Staples_Index_Fund_Admiral__factSheet.md  Core-Plus_Bond_ETF_factSheet.md  Core-Plus_Bond_Fund_Admiral__factSheet.md  Core-Plus_Bond_Fund_Investor__factSheet.md  Core_Bond_ETF_factSheet.md  Core_Bond_Fund_Admiral__factSheet.md  Core_Bond_Fund_Investor__factSheet.md  Core_Tax-Exempt_Bond_ETF_factSheet.md  Developed_Markets_Index_Fund_Admiral__factSheet.md  Developed_Markets_Index_Fund_Institutional_Plus__factSheet.md  Developed_Markets_Index_Fund_Institutional__factSheet.md  Developed_Markets_Index_Fund_Investor__factSheet.md  Developed_Markets_Index_Trust_Unit_A_factSheet.md  Developed_Markets_Index_Trust_Unit_D_factSheet.md  Diversified_Equity_Fund_factSheet.md  Dividend_Appreciation_ETF_factSheet.md  Dividend_Appreciation_Index_Fund_Admiral__factSheet.md  (+467 more)
notebooks/fund_factsheets/: Consumer_Discretionary_Index_Fund_Admiral__factSheet.md  Diversified_Equity_Fund_factSheet.md  Emerging_Markets_Select_Stock_Fund_factSheet.md  Financials_Index_Fund_Admiral__factSheet.md  High_Dividend_Yield_Index_Fund_Admiral__factSheet.md  Long-Term_Investment-Grade_Fund_Investor__factSheet.md  (+10 more)
scripts/: dump_database.sh  load_database.sh  start_llama_server.py  validate_neo4j_graph.py
tests/: test_chunking_fix.py  test_cypher_validator.py  test_entity_resolver.py  test_filing_retriever.py  test_neo4j_graph.py  test_providers.py  test_unstructured_parser_enhanced.py
(+210 files in other folders)
