[project]
name = "rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "alvarezcondeluis", email = "alvarezcondeluis@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.1.1",
    "pandas>=2.3.2",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "llama-index-core>=0.13.5",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.8.3",
    "neo4j==5.27.0",
    "neomodel==5.4.2",
    "llama-index-graph-stores-neo4j>=0.5.1",
    "pillow>=11.3.0",
    "nest-asyncio>=1.6.0",
    "datasets>=4.2.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "google-auth>=2.41.1",
    "google-genai>=1.46.0",
    "deepeval>=3.7.0",
    "instructor>=1.13.0",
    "edgartools>=5.8.0",
    "beautifulsoup4>=4.14.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
    "tqdm>=4.67.1",
    "plotly>=6.5.0",
    "kaleido>=1.2.0",
    "markdownify>=1.2.2",
    "faiss-cpu>=1.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "edgartools>=5.8.0",
    "pandas>=2.3.2",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]